name:                llymlaen
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable server
  hs-source-dirs:      server/src
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , servant
                     , servant-server
                     , servant-blaze
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , warp
                     , containers
                     , bytestring
  other-modules:       Api
                     , App
                     , Models
  default-language:    Haskell2010

test-suite llymlaen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      server/test
  main-is:             Spec.hs
  build-depends:       base
                     , server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
